--- a/.github/workflows/demo.yaml
+++ b/.github/workflows/demo.yaml
@@ -5,6 +5,7 @@ on:
             - main
 env:
     AWS_REGION: us-east-1
+    TF_VERSION: 1.5.0
 
 permissions:
     contents: read
@@ -22,6 +23,9 @@ jobs:
                     aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
                     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
                     aws-region: ${{ env.AWS_REGION}}
+
+            - name: set up terraform
+              run: hashicorp/setup-terraform@v2
 
             - name: terraform init
               run: terraform init
