--- a/.github/workflows/demo.yaml
+++ b/.github/workflows/demo.yaml
@@ -25,7 +25,9 @@ jobs:
                     aws-region: ${{ env.AWS_REGION}}
 
             - name: set up terraform
-              run: hashicorp/setup-terraform@v2
+              uses: hashicorp/setup-terraform@v2
+              with:
+                    terraform_version: ${{ env.TF_VERSION }}
 
             - name: terraform init
               run: terraform init
