--- a/.github/workflows/demo.yaml
+++ b/.github/workflows/demo.yaml
@@ -36,5 +36,5 @@ jobs:
               run: terraform plan
 
             - name: terraform apply
-              run: terraform apply
+              run: terraform apply -auto-approve
                 
