--- a/.github/workflows/destroy-resources.yml
+++ b/.github/workflows/destroy-resources.yml
@@ -30,7 +30,7 @@ jobs:
               run: terraform plan -destroy
  
             - name: terraform destroy
-              run: terraform destroy -auto-approve
+              run: terraform apply -destroy 
 
 
         
