--- a/.github/workflows/create-resources.yaml
+++ b/.github/workflows/create-resources.yaml
@@ -33,8 +33,8 @@ jobs:
               run: terraform init
 
             - name: terraform pla
-              run: terraform plan
+              run: terraform plan -out=tfplan
 
             - name: terraform apply
-              run: terraform apply -auto-approve
+              run: terraform apply -auto-approve tfplan
                 
