--- a/.github/workflows/destroy-resources.yml
+++ b/.github/workflows/destroy-resources.yml
@@ -1,12 +1,16 @@
 name: Delete terraform resources
 on:
     workflow_dispatch:
-env:
-    AWS_REGION: us-east-1
-    TF_VERSION: 1.5.0
+    schedule: 
+            - cron: '0 0 * * *'
+
 jobs:
     destroy_resources:
         runs-on: ubuntu-latest
+        env:
+            AWS_REGION: us-east-1
+            TF_VERSION: 1.5.0
+            
         steps:
             - name: Checkout code
               uses: actions/checkout@v3
